<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Background_Colour"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:background="@drawable/gradient2">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:background="@drawable/gradient"
                android:orientation="vertical"
                android:gravity="right">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Gender"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/Title_Margin"
                    android:textStyle="bold"
                    android:textSize="@dimen/Title_Size"
                    android:textAllCaps="true"
                    android:textColor="@color/Title_Colour"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:id="@+id/radioGroup">

                        <RadioButton
                            android:id="@+id/RadioButton_Male"
                            android:layout_width="170dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/radio_button_left"
                            android:button="@android:color/transparent"
                            android:text="Male"
                            android:checked="true"
                            android:textAlignment="center"
                            android:textColor="@android:color/holo_red_light" />

                        <RadioButton
                            android:id="@+id/RadioButton_Female"
                            android:layout_width="170dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/radio_button_right"
                            android:button="@android:color/transparent"
                            android:text="Female"
                            android:textAlignment="center"
                            android:textColor="#FFFFFF" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/Height"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Height"
                        android:textColor="@color/Title_Colour"
                        android:textSize="@dimen/Title_Size"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/Title_Margin"/>

                    <TextView
                        android:id="@+id/HeightAnswer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/Title_Colour"
                        android:textSize="@dimen/Title_Size"
                        android:layout_marginTop="@dimen/Title_Margin"
                        android:layout_marginLeft="10dp"/>

                </LinearLayout>

                <SeekBar
                    android:id="@+id/HeightSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:thumbTint="@color/Bar_Colour"
                    android:layout_marginTop="@dimen/Bar_Margin"
                    android:thumb="@drawable/thumb"
                    android:progressDrawable="@drawable/seek_bar"
                    android:max="300" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/Weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Weight"
                        android:textColor="@color/Title_Colour"
                        android:textSize="@dimen/Title_Size"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/Title_Margin"/>

                    <TextView
                        android:id="@+id/WeightAnswer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/Title_Colour"
                        android:textSize="@dimen/Title_Size"
                        android:layout_marginTop="@dimen/Title_Margin"
                        android:layout_marginLeft="10dp"/>

                </LinearLayout>


                <SeekBar
                    android:id="@+id/WeightSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:thumbTint="@color/Bar_Colour"
                    android:layout_marginTop="@dimen/Bar_Margin"
                    android:thumb="@drawable/thumb"
                    android:progressDrawable="@drawable/seek_bar"
                    android:max="300"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="40dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Age:"
                        android:textSize="@dimen/Title_Size"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textColor="@color/Title_Colour"
                        android:layout_marginLeft="20dp"/>

                    <EditText
                        android:id="@+id/Age"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:background="#FFFFFF"
                        android:layout_marginLeft="10dp"/>

                </LinearLayout>

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="@dimen/RButton_Width"
                    android:layout_height="@dimen/RButton_Height"
                    app:srcCompat="@android:drawable/ic_menu_send"
                    android:background="@drawable/circular_button"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="@dimen/Title_Margin"
                    android:onClick="GoToResults"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/curved_white_edge"
                android:orientation="vertical"
                android:gravity="center_horizontal|center_vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Info"
                    android:textAlignment="center"
                    android:textColor="@color/Info_text1"
                    android:layout_marginTop="@dimen/Info_Margin"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Info_2"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/Info_Spacing"
                    android:textStyle="italic"
                    android:fontFamily="sans-serif-thin"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <com.google.android.gms.ads.AdView
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner_ad_unit_id" />

            </LinearLayout>


        </LinearLayout>







</ScrollView>